@@ -54,6 +54,7 @@ set "JEYZER_DEMO_HOME=%cd%"
 cd "%CURRENT_DIR%"
 
 set CLASSPATH=
+set MODULE_PATH=
 
 rem Set the Jeyzer Recorder Agent paths if enabled
 if not exist "%JEYZER_DEMO_HOME%\bin\set-jeyzer-recorder-agent.bat" goto noSetJeyzerRecorderAgent
@@ -80,20 +81,36 @@ set "JAVA_OPTS=%JAVA_OPTS% -Xmx768m -Xmn100m"
 rem Program parameters
 set "PRG_PARAMS=scope=%LABORS_SCOPE%"
 
-rem Jeyzer publish library
-set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\lib\jeyzer-publish-${jeyzer-publish.version}.jar"
+rem - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+rem Classpath and Module path setup
+if "%JAVA_MODULE_SUPPORT%" == "true" goto gotJavaModuleSupport
 
+rem Standard classpath (JDK 8)
 rem Jeyzer demo duplicate libraries (for the duplicate lib detection)
 set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\lib\jeyzer-demo-dup-1.1.1.alpha.jar;%JEYZER_DEMO_HOME%\lib\jeyzer-demo-dup-2.2.2-SNAPSHOT.jar;%JEYZER_DEMO_HOME%\lib\jeyzer-demo-dup-no-version.jar"
 
 rem logging libraries
-set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\lib\slf4j-api-${jeyzer.demo-slf4j-api.version}.jar;%JEYZER_DEMO_HOME%\lib\logback-core-${jeyzer.demo-logback-core.version}.jar;%JEYZER_DEMO_HOME%\lib\logback-classic-${jeyzer.demo-ch.qos.logback.logback-classic.version}.jar;%JEYZER_DEMO_HOME%\lib\janino-${jeyzer.demo-org.codehaus.janino.janino.version}.jar;%JEYZER_DEMO_HOME%\lib\commons-compiler-${jeyzer.demo-janino.commons-compiler.version}.jar"
+set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\lib\slf4j-api-${jeyzer.demo-slf4j-api.version}.jar;%JEYZER_DEMO_HOME%\lib\logback-core-${jeyzer.demo-logback-core.version}.jar;%JEYZER_DEMO_HOME%\lib\logback-classic-${jeyzer.demo-ch.qos.logback.logback-classic.version}.jar"
 
-rem Jeyzer-demo, Jeyzer-demo-shared libraries and logback
-set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\lib\jeyzer-demo.jar;%JEYZER_DEMO_HOME%\lib\jeyzer-demo-shared-${jeyzer-demo-shared.version}.jar;%JEYZER_DEMO_HOME%\config\log"
+rem Jeyzer publish library
+set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\lib\jeyzer-publish-${jeyzer-publish.version}.jar"
+
+rem Jeyzer-demo, Jeyzer-demo-shared libraries
+set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\lib\jeyzer-demo.jar;%JEYZER_DEMO_HOME%\lib\jeyzer-demo-shared-${jeyzer-demo-shared.version}.jar"
+goto okDependencyPaths
+
+rem Modules (JDK 9+)
+:gotJavaModuleSupport
+set "MODULE_PATH=--module-path %JEYZER_DEMO_HOME%\mods --add-modules org.jeyzer.publish,org.jeyzer.demo.shared,org.slf4j,org.jeyzer.demo"
+
+:okDependencyPaths
+rem - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+rem logback
+set "CLASSPATH=%CLASSPATH%;%JEYZER_DEMO_HOME%\config\log"
 
 echo Starting Demo Labors v${project.version}...
-call "%JAVA_HOME%\bin\java.exe" %JEYZER_AGENT% %JEYZER_PUBLISH_PARAMS% %JAVA_OPTS% -cp %CLASSPATH% org.jeyzer.demo.labors.LaborsDemo %PRG_PARAMS%
+call "%JAVA_HOME%\bin\java.exe" %JEYZER_AGENT% %JEYZER_PUBLISH_PARAMS% %JAVA_OPTS% %MODULE_PATH% -cp %CLASSPATH% org.jeyzer.demo.labors.LaborsDemo %PRG_PARAMS%
 goto end
 
 :exit
