@@ -69,8 +69,10 @@ PRGDIR=`dirname "$PRG"`
 
 # set JEYZER_DEMO_HOME
 [ -z "$JEYZER_DEMO_HOME" ] && JEYZER_DEMO_HOME=`cd "$PRGDIR/.." >/dev/null; pwd`
+export JEYZER_DEMO_HOME
 
 CLASSPATH=
+MODULE_PATH=
 
 # Set the Jeyzer Recorder Agent paths if enabled
 if [ -r "$JEYZER_DEMO_HOME"/bin/set-jeyzer-recorder-agent.sh ]; then
@@ -92,21 +94,33 @@ JAVA_OPTS="$JAVA_OPTS -Xmx768m -Xmn100m"
 # Program parameters
 PRG_PARAMS="scope=$LABORS_SCOPE"
 
-# Jeyzer publish library
-CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-publish-${jeyzer-publish.version}.jar"
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+# Classpath and Module path setup
 
-# Jeyzer demo duplicate libraries (for the duplicate lib detection)
-CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-demo-dup-1.1.1.alpha.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-dup-2.2.2-SNAPSHOT.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-dup-no-version.jar"
+if [ "$JAVA_MODULE_SUPPORT" = "true" ]; then
+  MODULE_PATH="--module-path $JEYZER_DEMO_HOME/mods --add-modules org.jeyzer.publish,org.jeyzer.demo.shared,org.slf4j,org.jeyzer.demo"
+  export MODULE_PATH
+else
+  # Jeyzer publish library
+  CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-publish-${jeyzer-publish.version}.jar"
 
-# logging libraries
-CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/slf4j-api-${jeyzer.demo-slf4j-api.version}.jar:$JEYZER_DEMO_HOME/lib/logback-core-${jeyzer.demo-logback-core.version}.jar:$JEYZER_DEMO_HOME/lib/logback-classic-${jeyzer.demo-ch.qos.logback.logback-classic.version}.jar:$JEYZER_DEMO_HOME/lib/janino-${jeyzer.demo-org.codehaus.janino.janino.version}.jar:$JEYZER_DEMO_HOME/lib/commons-compiler-${jeyzer.demo-janino.commons-compiler.version}.jar"
+  # Jeyzer demo duplicate libraries (for the duplicate lib detection)
+  CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-demo-dup-1.1.1.alpha.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-dup-2.2.2-SNAPSHOT.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-dup-no-version.jar"
 
-# Jeyzer-demo, Jeyzer-demo-shared libraries and logback
-CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-demo.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-shared-${jeyzer-demo-shared.version}.jar:$JEYZER_DEMO_HOME/config/log"
+  # logging libraries
+  CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/slf4j-api-${jeyzer.demo-slf4j-api.version}.jar:$JEYZER_DEMO_HOME/lib/logback-core-${jeyzer.demo-logback-core.version}.jar:$JEYZER_DEMO_HOME/lib/logback-classic-${jeyzer.demo-ch.qos.logback.logback-classic.version}.jar"
+
+  # Jeyzer-demo, Jeyzer-demo-shared libraries and logback
+  CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-demo.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-shared-${jeyzer-demo-shared.version}.jar:$JEYZER_DEMO_HOME/config/log"
+fi
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+
+# logback
+CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/config/log"
 export CLASSPATH
 
 # Java debug options
 # JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5000"
 
 echo Starting Demo Labors v${project.version}...
-$JAVA_HOME/bin/java $JEYZER_AGENT $JEYZER_PUBLISH_PARAMS $JAVA_OPTS -cp $CLASSPATH org.jeyzer.demo.labors.LaborsDemo $PRG_PARAMS
+$JAVA_HOME/bin/java $JEYZER_AGENT $JEYZER_PUBLISH_PARAMS $JAVA_OPTS $MODULE_PATH -cp $CLASSPATH org.jeyzer.demo.labors.LaborsDemo $PRG_PARAMS
