@@ -60,8 +60,10 @@ PRGDIR=`dirname "$PRG"`
 
 # set JEYZER_DEMO_HOME
 [ -z "$JEYZER_DEMO_HOME" ] && JEYZER_DEMO_HOME=`cd "$PRGDIR/.." >/dev/null; pwd`
+export JEYZER_DEMO_HOME
 
 CLASSPATH=
+MODULE_PATH=
 
 # Set the Jeyzer Recorder Agent paths if enabled
 if [ -r "$JEYZER_DEMO_HOME"/bin/set-jeyzer-recorder-agent.sh ]; then
@@ -80,15 +82,27 @@ fi
 # JVM options
 #JAVA_OPTS="$JAVA_OPTS -Xmn15m -Xms20m -Xmx20m"
 
-# logging libraries
-CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/slf4j-api-${jeyzer.demo-slf4j-api.version}.jar:$JEYZER_DEMO_HOME/lib/logback-core-${jeyzer.demo-logback-core.version}.jar:$JEYZER_DEMO_HOME/lib/logback-classic-${jeyzer.demo-ch.qos.logback.logback-classic.version}.jar:$JEYZER_DEMO_HOME/lib/janino-${jeyzer.demo-org.codehaus.janino.janino.version}.jar:$JEYZER_DEMO_HOME/lib/commons-compiler-${jeyzer.demo-janino.commons-compiler.version}.jar"
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+# Classpath and Module path setup
 
-# Jeyzer-demo, Jeyzer-demo-shared libraries and logback
-CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-demo.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-shared-${jeyzer-demo-shared.version}.jar:$JEYZER_DEMO_HOME/config/log"
+if [ "$JAVA_MODULE_SUPPORT" = "true" ]; then
+  MODULE_PATH="--module-path $JEYZER_DEMO_HOME/mods --add-modules org.jeyzer.publish,org.jeyzer.demo.shared,org.slf4j,org.jeyzer.demo"
+  export MODULE_PATH
+else
+  # logging libraries
+  CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/slf4j-api-${jeyzer.demo-slf4j-api.version}.jar:$JEYZER_DEMO_HOME/lib/logback-core-${jeyzer.demo-logback-core.version}.jar:$JEYZER_DEMO_HOME/lib/logback-classic-${jeyzer.demo-ch.qos.logback.logback-classic.version}.jar"
+
+  # Jeyzer-demo, Jeyzer-demo-shared libraries and logback
+  CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/lib/jeyzer-demo.jar:$JEYZER_DEMO_HOME/lib/jeyzer-demo-shared-${jeyzer-demo-shared.version}.jar:$JEYZER_DEMO_HOME/config/log"
+fi
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+
+# logback
+CLASSPATH="$CLASSPATH:$JEYZER_DEMO_HOME/config/log"
 export CLASSPATH
 
 # Java debug options
 # JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5000"
 
 echo Starting Demo Philosophers v${project.version}...
-$JAVA_HOME/bin/java $JEYZER_AGENT $JAVA_OPTS org.jeyzer.demo.philosopher2.PhilosophersDemo type=$SCENARIO
+$JAVA_HOME/bin/java $JEYZER_AGENT $JAVA_OPTS $MODULE_PATH -cp $CLASSPATH org.jeyzer.demo.philosopher2.PhilosophersDemo type=$SCENARIO
